--- a/header/header_style.css
+++ b/header/header_style.css
@@ -32,7 +32,7 @@ html{
 
 
 #navbar1{
-    background-color: #344E41;
+    background-color: #9fe9c4;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -155,6 +155,21 @@ html{
     height: 6px; 
     background-color: whitesmoke;
     margin: 5px 0;
+    transition: 0.4s;
+}
+
+/* Header 3 CSS */
+
+#navbar3{
+    background-color: #6dc0c0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem 10%; 
+
+    top: 0; 
+    width: 100%;
+    height: 3.5rem;
     transition: 0.4s;
 }
 
