--- a/header/header_style.css
+++ b/header/header_style.css
@@ -24,7 +24,7 @@ html{
 
 #spacer{
     width: 100%;
-    height: 5rem;
+    height: 3rem;
     color: red;
 }
 
@@ -45,7 +45,7 @@ html{
 }
 
 #navbar1 li, a, h2{
-    color: whitesmoke;
+    color: rgb(0, 0, 0);
 }
 
 #navbar1 li, a{
@@ -161,7 +161,7 @@ html{
 /* Header 3 CSS */
 
 #navbar3{
-    background-color: #6dc0c0;
+    background-color: #ca5234;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -173,5 +173,73 @@ html{
     transition: 0.4s;
 }
 
+.navlinks3{
+    margin-left: auto;
+}
 
+.logo3{
+    margin-left: auto;
+    margin-top: .75rem;
+}
 
+.navlinks3 {
+    list-style: none;
+    margin-left: auto;
+}
+
+.navlinks3 li{
+    display: inline-block;
+    padding: 0px 2rem;
+}
+
+.navlinks3 li a{
+    transition: all 0.3s ease 0s;
+}
+
+.navlinks3 li a:hover{
+    color: #d5dacd;
+    text-decoration: underline;
+}
+
+/* Header 4 CSS */
+
+#navbar4{
+    background-color: #344E41;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem 10%; 
+
+    top: 0; 
+    width: 100%;
+    height: 3.5rem;
+    transition: 0.4s;
+}
+
+#navbar4 a{
+    text-decoration: none;
+}
+
+.logo4{
+    margin-left: auto;
+    margin-top: .75rem;
+}
+
+.checkbox4{
+    cursor: pointer;
+    margin-right: auto;
+}
+
+.burgerbox4 div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-style: bold;
+    flex-direction: column;
+
+    width: 40px; 
+    height: 6px; 
+    background-color: whitesmoke;
+    margin: 5px 0;
+    transition: 0.4s;
+}
